# test_django

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
conf/: urls.py
conf/settings/: base.py
conf/settings/prod/: __init__.py
payouts/: admin.py  celery.py  models.py  repositories.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
payouts/migrations/: 0001_initial.py
